[package]
name = "pasaka"
version = "0.1.0"
edition = "2024"

[features]
wasm = [
    "dep:web-sys",
    "dep:wasm-bindgen",
    "dep:gloo",
    "dep:console_error_panic_hook",
]

[dependencies]
console = "0.16.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
ctor = "0.5.0"
dialoguer = "0.12.0"
erased-serde = "0.4.6"
futures = "0.3.31"
gloo = { version = "0.11.0", features = [
    "events",
    "futures",
    "storage",
], optional = true }
inventory = "0.3.21"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
wasm-bindgen = { version = "0.2.100", optional = true }
web-sys = { version = "0.3.77", features = [
    "Window",
    "Document",
    "Element",
    "Storage",
    "console",
    'HtmlElement',
    'Node',
], optional = true }
