[package]
name = "pasaka"
version = "0.1.0"
edition = "2024"

[features]
wasm = [
    "dep:web-sys",
    "dep:wasm-bindgen",
    "dep:gloo",
    "dep:gloo-storage",
    "dep:yew",
    "dep:console_error_panic_hook",
    "dep:uuid",
]

[dependencies]
console = "0.16.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
ctor = "0.5.0"
dialoguer = "0.12.0"
erased-serde = "0.4.6"
futures = "0.3.31"
gloo = { version = "0.11.0", features = [
    "events",
    "futures",
    "storage",
], optional = true }
gloo-storage = { version = "0.3.0", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
uuid = { version = "1.18.1", features = ["js", "v4"], optional = true }
wasm-bindgen = { version = "0.2.101", optional = true }
web-sys = { version = "0.3.78", features = [
    "Window",
    "Document",
    "Element",
    "Storage",
    "console",
    "HtmlElement",
    "Node",
], optional = true }
yew = { version = "0.21.0", optional = true }
