[package]
name = "pasaka"
version = "0.1.0"
edition = "2024"
description = "Interactive fiction game engine"
keywords = ["web", "gamedev", "game", "engine"]
license-file = "LICENSE.txt"
categories = ["web-programming", "game-engines"]
repository = "https://github.com/JulGvoz/pasaka"

[features]
web = ["dep:gloo-storage", "dep:yew"]

[dependencies]
pasaka_macro = { version = "0.1.0", path = "../pasaka_macro" }
console = "0.16.0"
ctor = "0.5.0"
dialoguer = "0.12.0"
erased-serde = "0.4.6"
futures = "0.3.31"
replace_with = "0.1.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
gloo-storage = { version = "0.3.0", optional = true }
yew = { version = "0.21.0", features = ["csr"], optional = true }

[package.metadata.docs.rs]
all-features = true
