[package]
name = "pasaka_macro"
version = "0.1.0"
edition = "2024"
description = "#[passage] macro for pasaka"
keywords = ["macro"]
license-file = "LICENSE.txt"
repository = "https://github.com/JulGvoz/pasaka"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.106", features = ["extra-traits", "full"] }
ctor = "0.5.0"
