[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
ctor = "0.5.0"
pasaka = { version = "0.1.0", path = "../../pasaka" }
pasaka_macro = { version = "0.1.0", path = "../../pasaka_macro" }
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
    "Window",
    "Document",
    "Element",
    "Storage",
    "console",
] }
