[package]
name = "hello-web"
version = "0.1.0"
edition = "2024"

[dependencies]
ctor = "0.5.0"
pasaka = { version = "0.1.0", path = "../../pasaka", features = ["wasm"] }
pasaka_macro = { version = "0.1.0", path = "../../pasaka_macro" }
serde = { version = "1.0.219", features = ["derive"] }
yew = { version = "0.21.0", features = ["csr"] }
